add support for Records to what was the afterburner package. Since this has been heavily modified now renaming it's package betterfxml